--- a/index.html
+++ b/index.html
@@ -396,7 +396,7 @@
       <div class="container">
 
         <p class="copyright">
-          &copy; 2024 Zero-Day Hunters team All Rights Reserved.
+          &copy; 2024 Zero-Day Hunters team. All Rights Reserved.
         </p>
 
       </div>
