--- a/pages/index.html
+++ b/pages/index.html
@@ -30,13 +30,13 @@
   <!-- 
     - custom css link
   -->
-  <link rel="stylesheet" href="./assets/css/style.css">
+  <link rel="stylesheet" href="./style.css">
 
   <!-- 
     - preload images
   -->
-  <link rel="preload" as="image" href="./assets/images/hero-banner.png">
-  <link rel="preload" as="image" href="./assets/images/hero-banner-bg.png">
+  <link rel="preload" as="image" href="./hero-banner.png">
+  <link rel="preload" as="image" href="./hero-banner-bg.png">
 
 </head>
 
@@ -55,7 +55,7 @@
         <br>
         <ul class="navigation">
           <br>
-          <li><img src="./assets/images/logo2.png" alt="" class="logo"></li>
+          <li><img src="./logo2.png" alt="" class="logo"></li>
           <li><a href="./index.html">Home</a></li>
           <li><a href="./games.html">Games</a></li>
           <li><a href="./courses.html">Courses</a></li>
@@ -63,7 +63,7 @@
           <button class="nav-btn">Try for Free</button>
         </ul>
         <button class="nav-toggle">
-          <img src="./assets/images/menu.svg" alt="menu">
+          <img src="./menu.svg" alt="menu">
         </button>
       </div>
     </header>
@@ -82,12 +82,12 @@
           </p>
           <div class="hero-buttons">
             <a href="./games.html" class="btn btn-primary">Play Now!</a>
-            <a href="./error.html" class="btn btn-secondary">Learn More</a>
+            <a href="./courses.html" class="btn btn-secondary">Learn More</a>
           </div>
         </div>
         <!-- Hero Image -->
         <div class="hero-image">
-          <img src="./assets/images/vecteezy_encrypted-desktop-pc-3d-illustration_14219597.png" alt="Cybersecurity Illustration">
+          <img src=".///index1.png" alt="Cybersecurity Illustration">
         </div>
       </div>
    <br>
@@ -159,21 +159,21 @@
 
 <div class="card-deck custom-card-deck">
   <div class="card other-cards">
-    <img class="card-img-top" src="./assets/images/course-1.jpg"  alt="Card image cap">
+    <img class="card-img-top" src=".//index3.png"  alt="Card image cap">
     <div class="card-body">
       <h5 class="card-title">intro to cybersecurity</h5>
       <p class="card-text">by CS50</p>
     </div>
   </div>
   <div class="card center-card">
-    <img class="card-img-top" src="./assets/images/course-2.jpg"  alt="Card image cap">
+    <img class="card-img-top" src=".//index2.png"  alt="Card image cap">
     <div class="card-body">
       <h5 class="card-title">Blockchain and Cryptocurrency Basics</h5>
       <p class="card-text">by Zero-Day Hunters</p>
     </div>
   </div>
   <div class="card other-cards">
-    <img class="card-img-top" src="./assets/images/course-3.jpg" alt="Card image cap">
+    <img class="card-img-top" src=".//index4.png" alt="Card image cap">
     <div class="card-body">
       <h5 class="card-title">Certified Information Systems Security Professional (CISSP)</h5>
       <p class="card-text">by (ISC)</p>
@@ -286,7 +286,7 @@
         <div class="footer-brand">
 
           <a href="./index.html" class="logo">
-            <img src="./assets/images/logo2.png" width="150" height="73" loading="lazy" alt="Zero-Day Hunters logo">
+            <img src="./logo2.png" width="150" height="73" loading="lazy" alt="Zero-Day Hunters logo">
           </a>
 
           <p class="footer-text">
@@ -412,7 +412,7 @@
   </a>
 
   <!--custom js link-->
-  <script src="./assets/js/script.js"></script>
+  <script src="./script.js"></script>
 
   <!-- 
     - ionicon link
