--- a/pages/error.html
+++ b/pages/error.html
@@ -17,7 +17,7 @@
       margin: 0;
       padding: 0;
       font-family: 'Work Sans', sans-serif;
-      background: url('./assets/images/body-bg.jpg') no-repeat center center fixed;
+      background: url('./body-bg.jpg') no-repeat center center fixed;
       background-size: cover;
       color: #ffffff;
       display: flex;
